@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/selinux-hal-20070928.ebuild,v 1.1 2007/11/27 02:45:34 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/selinux-hal-20070928.ebuild,v 1.2 2008/02/03 01:37:30 pebenito Exp $
 
 IUSE=""
 
@@ -12,4 +12,4 @@ RDEPEND="sec-policy/selinux-dbus"
 
 DESCRIPTION="SELinux policy for desktops"
 
-KEYWORDS="~alpha ~amd64 ~mips ~ppc ~sparc ~x86"
+KEYWORDS="alpha amd64 mips ppc sparc x86"
