@@ -1,6 +1,10 @@
 # ChangeLog for sec-policy/selinux-hal
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.4 2007/11/27 02:45:34 pebenito Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-hal/Attic/ChangeLog,v 1.5 2008/02/03 01:37:30 pebenito Exp $
+
+  03 Feb 2008; Chris PeBenito <pebenito@gentoo.org>
+  selinux-hal-20070928.ebuild:
+  Mark stable.
 
 *selinux-hal-20070928 (26 Nov 2007)
 
